Bug 471832 - Text Color too Dark to read in Search Box

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme_common.css
@@ -107,6 +107,11 @@ a:hover {
 	color:white !important;
 }
 
+.checkedRow  > td > a > span > span
+{
+	color:white !important;
+}
+
 .checkedRow .secondaryColumn {
 	color: white;
 }
